samples/_failures_safe/1761249895_1ae096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_faca128b.c: In function ‘main’:
./samples/SAFE/__tmp_faca128b.c:141:12: error: missing terminating " character
  141 |     printf("
      |            ^
./samples/SAFE/__tmp_faca128b.c:141:5: error: expected expression at end of input
  141 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_faca128b.c:141:5: error: expected declaration or statement at end of input
